@@ -23,20 +23,23 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.regex.Pattern;
 
-import org.apache.tools.ant.Project;
-import org.apache.tools.ant.Task;
 import org.apache.cayenne.access.DataPort;
 import org.apache.cayenne.access.DataPortDelegate;
 import org.apache.cayenne.map.DataMap;
 import org.apache.cayenne.map.DbEntity;
 import org.apache.cayenne.query.Query;
+import org.apache.tools.ant.Project;
+import org.apache.tools.ant.Task;
 
 /**
- * DataPortDelegate implementation that works in the context of Ant DataPortTask task
- * execution, performing entity filtering and logging functions.
+ * DataPortDelegate implementation that works in the context of Ant DataPortTask
+ * task execution, performing entity filtering and logging functions.
  * 
- * @since 1.2: Prior to 1.2 DataPort classes were a part of cayenne-examples package.
+ * @since 1.2: Prior to 1.2 DataPort classes were a part of cayenne-examples
+ *        package.
+ * @deprecated since 3.2
  */
+@Deprecated
 class AntDataPortDelegate implements DataPortDelegate {
 
     protected Task parentTask;
@@ -57,17 +60,15 @@ class AntDataPortDelegate implements DataPortDelegate {
             String includeEntitiesPattern, String excludeEntitiesPattern) {
         this.parentTask = parentTask;
 
-        this.namePatternMatcher = new NamePatternMatcher(
-                new AntLogger(parentTask),
-                includeEntitiesPattern,
-                excludeEntitiesPattern);
+        this.namePatternMatcher = new NamePatternMatcher(new AntLogger(
+                parentTask), includeEntitiesPattern, excludeEntitiesPattern);
 
         this.mapFilters = namePatternMatcher.createPatterns(mapsPattern);
     }
 
     /**
-     * Applies preconfigured list of filters to the list, removing entities that do not
-     * pass the filter.
+     * Applies preconfigured list of filters to the list, removing entities that
+     * do not pass the filter.
      */
     protected List filterEntities(List entities) {
         if (entities == null || entities.isEmpty()) {
@@ -89,8 +90,8 @@ class AntDataPortDelegate implements DataPortDelegate {
     }
 
     /**
-     * Returns true if the DataMap passes a set of DataMap filters or if there is no
-     * DataMap filters.
+     * Returns true if the DataMap passes a set of DataMap filters or if there
+     * is no DataMap filters.
      */
     protected boolean passedDataMapFilter(DataMap map) {
         if (mapFilters.length == 0) {
@@ -112,8 +113,8 @@ class AntDataPortDelegate implements DataPortDelegate {
     }
 
     /**
-     * Implements the delegate method to filter the list of entities applying filtering
-     * rules encapsulated by this object.
+     * Implements the delegate method to filter the list of entities applying
+     * filtering rules encapsulated by this object.
      */
     public List willPortEntities(DataPort portTool, List entities) {
         return filterEntities(entities);
@@ -132,14 +133,14 @@ class AntDataPortDelegate implements DataPortDelegate {
     public void didPortEntity(DataPort portTool, DbEntity entity, int rowCount) {
         String timestampLabel = "";
         if (lastEntity == entity) {
-            timestampLabel = " in " + (System.currentTimeMillis() - timestamp) + " ms.";
+            timestampLabel = " in " + (System.currentTimeMillis() - timestamp)
+                    + " ms.";
         }
 
         String label = (rowCount == 1) ? "1 row transferred" : rowCount
                 + " rows transferred";
-        parentTask.log(
-                "Done porting " + entity.getName() + ", " + label + timestampLabel,
-                Project.MSG_VERBOSE);
+        parentTask.log("Done porting " + entity.getName() + ", " + label
+                + timestampLabel, Project.MSG_VERBOSE);
     }
 
     public List willCleanData(DataPort portTool, List entities) {
@@ -156,14 +157,13 @@ class AntDataPortDelegate implements DataPortDelegate {
     public void didCleanData(DataPort portTool, DbEntity entity, int rowCount) {
         String timestampLabel = "";
         if (lastEntity == entity) {
-            timestampLabel = " in " + (System.currentTimeMillis() - timestamp) + " ms.";
+            timestampLabel = " in " + (System.currentTimeMillis() - timestamp)
+                    + " ms.";
         }
 
-        String label = (rowCount == 1) ? "1 row deleted" : rowCount + " rows deleted";
-        parentTask.log("Done deleting "
-                + entity.getName()
-                + ", "
-                + label
+        String label = (rowCount == 1) ? "1 row deleted" : rowCount
+                + " rows deleted";
+        parentTask.log("Done deleting " + entity.getName() + ", " + label
                 + timestampLabel, Project.MSG_VERBOSE);
     }
 }
